<resources>
    <string name="app_name">BigData</string>
    <string name="logo">logo</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="deu_branco_clique_aqui">Deu Branco? Clique Aqui</string>
    <string name="barrainferior">barraInferior</string>
    <string name="cadastre_se">cadastre-se</string>
    <string name="novo_por_aqui_cadastre_se_aqui">Novo Por Aqui? Cadastre-se Aqui</string>
    <string name="n_o_tem_conta_cadastre_se_aqui">Não Tem Conta? Cadastre-se Aqui</string>
    <string name="separador">separador</string>
    <string name="email">email</string>
    <string name="usuario_email_com">usuario@email</string>
    <string name="linha">linha</string>
    <string name="menu_musica">menu_musica</string>
    <string name="menu_imagens">menu_imagens</string>
    <string name="galeria">GALERIA</string>
    <string name="filmes">FILMES</string>
    <string name="udios">ÁUDIOS</string>
    <string name="btn_menu_xxx">Button</string>
    <string name="xxxx">XXXX</string>
    <string name="footer">footer</string>
    <string name="mantenha_a_calma">MANTENHA A CALMA!!!!</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="img_video_praia">img_video_praia</string>
    <string name="rodape_video">rodape_video</string>
    <string name="nova_temporada_2020">Nova Temporada 2020</string>
    <string name="t_01ep_01_professores_na_praia">T:01EP:01 - Professores Na Praia</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur placerat at tortor eget pulvinar. Pellentesque elementum id dolor eget maximus. Proin massa lorem, facilisis a maximus nec, blandit id justo...</string>
    <string name="lorem_ipssum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur placerat at tortor eget pulvinar. Pellentesque elementum id dolor eget maximus. Proin massa lorem, facilisis a maximus nec, blandit id justo...</string>
    <string name="video_pato">video_pato</string>
    <string name="t_01ep_02_baile_a_fantasia">T:01EP:02 - Baile a Fantasia</string>
    <string name="foto_perfil">foto_perfil</string>
    <string name="t_01_ep_02_rock_do_chicote">T:01 EP:02_Rock do Chicote</string>
    <string name="iinput_url">iinput_url</string>
    <string name="logo_parse">logo_parse</string>
    <string name="rodape_parse">rodape_parse</string>
    <string name="jsoup_html_parse">JSOUP - HTML PARSE</string>
    <string name="pesquisar_na_web">Pesquisar na Web</string>
    <string name="v_deos_exclusivos">VÍDEOS EXCLUSIVOS</string>
    <string name="data">05/06/2020</string>
    <string name="t_01_ep_01festa_na_praia">T:01:EP:01Festa na Praia</string>
    <string name="data_ep_01">29/05/2020</string>
</resources>
